--- a/web/index.html
+++ b/web/index.html
@@ -2,11 +2,22 @@
 <html>
  <head>
  <meta charset = "utf-8">
- <title> Digital Clock Using JavaScript </title>
+ <title> Opa Dashboard </title>
  <link rel = "stylesheet" href = "styles.css">
  </head>
  <body>
- <div id = "digital-clock"> </div>
+ <div id = "dayofweek"> </div>
+ <div id = "timeofday"> </div>
+ <div id = "clock"> </div>
+ <table id="date">
+  <thead>
+    <tr>
+      <td id="dayofmonth"></td>
+      <td id="month"></td>
+      <td id="year"></td>
+    </tr>
+  </thead>
+  </table>
  <script src = "script.js"> </script>
  </body>
 </html>
